--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ clap = { version = "4.5.27", features = ["derive"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 shellexpand = "3.1.0"
+
+[lints.clippy]
+pedantic = "deny"
